--- a/bankAccount/bankAccount.csproj
+++ b/bankAccount/bankAccount.csproj
@@ -45,8 +45,11 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="Checking.cs" />
+    <Compile Include="Client.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Savings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
